--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "daisyui": "^4.12.14",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.2",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   }
